added structure and styling to the profile page

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ header {
   width: 95%;
   height: 10vh;
   background-color: #003049;
+  font-size: 2vw;
   display:flex;
   align-items:center;
   justify-content:space-between;
@@ -24,6 +25,70 @@ header {
   align-items:center;
   margin-left:30px;
 }
+
+#newUser {
+  background-color: #003049;
+  color: white;
+  display:flex;
+  justify-content: center;
+  margin-top: 10vw;
+  list-style: none;
+}
+
+#enterStyle {display: flex;
+  justify-content: center;
+
+}
+
+#prof {display:flex;
+  flex-direction:row;
+justify-content: center;
+font-size: 2vw;
+
+
+  
+}
+
+.button {display: flex;
+  justify-content: center;
+}
+
+button {
+  margin-top:1vw;
+  background-color: #b7b9ba;
+  border-radius: 20px;
+  border-style: none;
+  margin-bottom: 1vw;
+
+
+
+}
+h2  {display:flex;
+  justify-content: center;
+  font-size: 3vw;
+  margin-top: 5vw;
+  margin-bottom: 4vw;
+
+}
+
+#genre {display:flex;
+  justify-content: center;
+
+ 
+}
+
+.genreicon {margin-left: 8vw;
+  border-style: none;
+  border-radius: 150px;
+}
+
+
+
+
+
+
+
+
 
 a {
   text-decoration: none;
