--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 
 header {
   width: 95%;
-  height: 10vh;
+  height: 12vh;
   background-color: #003049;
   font-size: 2vw;
   display:flex;
@@ -24,6 +24,7 @@ header {
   flex-direction:row;
   align-items:center;
   margin-left:30px;
+  padding: 20px;
 }
 
 #newUser {
