--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,9 @@ td {
   font-family: Sacramento;
 }
 
+#wyos {
+  color: white;
+}
 
 
 a {
@@ -157,7 +160,7 @@ footer {
   bottom: 0px;
   width: 100%;
   margin-top: 350px;
-  padding: 20px;
+  padding: 10px;
   background-color: #003049;
 
 }
