--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,12 @@ body {
   background-image: url("/img/book.jpg");
   font-family: raleway;
   margin: auto;
+  height: 100%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
 
 header {
   width: 95%;
