--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,8 @@ header {
 }
 
 #newUser {
-  background-color: #003049;
+  /* background-color: #003049; */
+  background-color: hsla(201, 100%, 14%, 0.6);
   color: white;
   display:flex;
   justify-content: center;
