--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,20 @@ header {
   padding: 20px;
 }
 
+button:hover {
+  transform: scale(1.2, 1.2); 
+  background-color: rgb(171, 169, 212);
+  color: white;
+}
+
+button:active {
+   transform: scale(1,1);
+}
+
+
+
+
+
 #enterStyle {display: flex;
   justify-content: center;
 
@@ -168,6 +182,10 @@ a {
   padding-right: 50px;
   color:white;
   margin-right: 25px;
+}
+
+a:hover {
+  color: #de6288;
 }
 
 footer {
