--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,20 @@ header {
   padding: 20px;
 }
 
-#newUser {
+#h2-section {
+  width: 60%;
+  margin: auto;
+  padding: 150px;
+}
+
+#wyos {
+  width: inherit;
+  font-weight: bold;
+  margin: auto;
+
+}
+
+#newUser, #selbar {
   /* background-color: #003049; */
   background-color: hsla(201, 100%, 14%, 0.6);
   color: white;
@@ -42,6 +55,10 @@ header {
   list-style: none;
   width: 40%;
   margin: auto;
+  padding: 10px;
+}
+
+#selbar {
   padding: 10px;
 }
 
