--- a/css/styles.css
+++ b/css/styles.css
@@ -252,9 +252,12 @@ footer {
 }
 
 .bioName {
-display: flex;
-align-items: center;
-justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+  padding: 50px;
+  margin-left: 150px;
 }
 
 .imgDiv {
@@ -270,6 +273,6 @@ justify-content: center;
 }
 
 .pic {
-  height: 8vw;
-  width: 8vw;
+  height: 13vw;
+  width: 13vw;
 }
