--- a/css/styles.css
+++ b/css/styles.css
@@ -162,25 +162,40 @@ h2  {display:flex;
   font-size: 1.5vw;
   margin-top: 20px;
 }
+#storyLink, #homeFromProfile{
+  margin: auto;
+  color: black;
+  font-weight: bold;
+  padding-top: 20px;
+}
 
 /* added table-section and td styling */
 #table-section {
-  width: 70%;
+  /* width: 70%; */
   padding: 50px;
   margin: auto;
+  /* text-align: center; */
 }
 
-td {
-  width: 20%;
+th, td {
+  width: 70%;
+  padding: 10px;
+  text-align: center;
+  margin: auto;
+  /* align-items: center; */
+  
 }
 
-.table-div {
-  width: 50%;
-  background-color: darkgray;
+#shelf {
+  /* width: 50%; */
+  background-color: hsla(201, 100%, 14%, 0.6);
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   flex-direction: column;
-  padding: 30px;
+  /* padding: 30px; */
+  background-image: url(/img/bookcover.png);
+  background-size: contain;
+  color: antiquewhite;
 }
 
 
@@ -201,7 +216,7 @@ a {
   margin-right: 25px;
 }
 
-a:hover {
+a:hover, #storyLink:hover, #homeFromProfile:hover {
   color: #de6288;
 }
 
