removed unecessary files, fixed imag width

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ h2  {display:flex;
   align-items: center;
   justify-content: column;
   background-color: darkgray;
-  width: 60%;
+  width: 500px;
 }
 
 .table-h2 {
