--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("./img/book.jpg");
+  background-image: url("/img/book.jpg");
   font-family: raleway;
   margin: auto;
   height: 100%; 
@@ -205,8 +205,18 @@ th, td {
 }
 
 
-.styling, a {
+.styling, a, .bioDiv h3 {
   font-family: Sacramento;
+}
+
+.bioDiv h3 {
+  font-weight: bold;
+  font-size: 3.6vh;
+}
+
+.bioDiv p {
+  font-family: 'Lucida Sans';
+  font-size: 2.3vh;
 }
 
 a {
@@ -285,9 +295,11 @@ footer {
   font-size: 30px;
   color:white;
   display: inline;
+  background-color: hsla(201, 100%, 14%, 0.6);
 }
 
 .pic {
   height: 13vw;
   width: 13vw;
 }
+
